fixed bug with favicon; made up-button invisible at start

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -630,6 +630,7 @@ body {
 }
 
 .up {
+    display: none;
     position: fixed;
     z-index: 999;
     bottom: 100px;
